--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <article class="work-example">
                 <img src="img/plex.png" alt="Screenshot of plex app clone website.">
                 <h2>Plex Clone</h2>
-                <a href="https://github.com/elizabethpedley/PlexClone">GitHub</a>
+                <a href="https://github.com/elizabethpedley/PlexClone">GitHub Repo</a>
             </article>
             <article class="work-example">
                 <img src="img/sos.png" alt="Screenshot of snack ordering system website.">
-                <h2>Snack Ordering System</h2>
-                <a href="https://github.com/elizabethpedley/SOS-project">GitHub</a>
+                <h2>Snack Ordering App</h2>
+                <a href="https://github.com/elizabethpedley/SOS-project">GitHub Repo</a>
             </article>
         </div>
     </body>
