--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-me">
             <img src="img/dogs.jpg" alt="Photo of Elizabeth Pedley and her 2 dogs.">
-            <p> I’m a wife, “dog mom”, and an avid programmer. When I started in the industry as a front-end developer creating websites with html, css, and wordpress, I quickly realized how much I enjoyed the challenge of programming. Due to my desire to learn more, I enrolled in Coding Dojo, where I’ve spent the last three months learning full-stack development in Python, C#, and MEAN stack with my focus being on the MEAN stack. I’m a quick learner, team player, and I have strong leadership skills. With my new knowledge, I’m looking for career opportunities that challenge and encourage me to grow my skills as a developer. Connect with me on <a href="https://www.linkedin.com/in/elizabethmpedley/">Linkedin</a> or view my resume <a href="resume.html">here!</a>.</p>
+            <p> I’m a wife, “dog mom”, and an avid programmer. 
+                When I started in the industry as a front-end developer creating websites with html, css, and wordpress, I quickly realized how much I enjoyed the challenge of programming. Over the last few years I've gone from creating basic websites to full fledged web applications. I’m a quick learner, team player, and I have strong leadership skills. I've worked with multiple different languages and tech stacks. I'm currently working as a Software Engineer where I've planned, designed, developed, and depolyed multiple different projects. Connect with me on <a href="https://www.linkedin.com/in/elizabethmpedley/">Linkedin</a> or view my resume <a href="resume.html">here!</a>.</p>
         </div>
         <!-- Featured work information-->
-        <h2 class="section-title">Featured Work</h2>
+        <!-- <h2 class="section-title">Featured Work</h2>
         <div class="featured-work">
             <article class="work-example">
                 <img src="img/tictactoe.png" alt="Screenshot of multiplayer game website.">
@@ -47,6 +48,6 @@
                 <h2>Snack Ordering App</h2>
                 <a href="https://github.com/elizabethpedley/SOS-project">GitHub Repo</a>
             </article>
-        </div>
+        </div> -->
     </body>
 </html>
