--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,6 @@
         </header>
         <!-- Horizontal Rule-->
         <hr>
-        <embed src="img/Resume-July2018.pdf" type="application/pdf" width="100%" height="600px" />
+        <embed src="img/ElizabethPedleyResume-2019.pdf" type="application/pdf" width="100%" height="600px" />
     </body>
 </html>
